// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`address должен отрендерить адрес, если showAddress=true 1`] = `
<span
  className="MetroListPlace MetroListPlace_ellipsis"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
  </span>
  <span
    className="MetroListPlace__address MetroListPlace_space"
  >
    Льва Толстого 16
  </span>
</span>
`;

exports[`address должен отрендерить только название города, если переданы showMetro=false и showAddress=false 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
  </span>
</span>
`;

exports[`address не должен отрендерить адрес, если showAddress=false 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
  </span>
</span>
`;

exports[`address не должен отрендерить адрес, если showAddress=true, но рендерит расстояние до города 1`] = `
<span
  className="MetroListPlace MetroListPlace_ellipsis"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
     (600 км от Санкт-Петербурга
    )
  </span>
</span>
`;

exports[`showDistanceFromSelectedCity должен отрендерить дистанцию рядом с названием города 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
     (600 км от Санкт-Петербурга
    )
  </span>
</span>
`;

exports[`showDistanceFromSelectedCity должен отрендерить дистанцию рядом с названием города и infoPopup для растояния больше георадиуса 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
     (более 200 км от Санкт-Петербурга
    <div
      className="InfoPopup InfoPopup_theme_dark MetroListPlace__tooltip"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="Popup Popup_animation_full Popup-info "
      />
    </div>
    )
  </span>
</span>
`;

exports[`должен добавить класс MetroListPlace_ellipsis, если ellipsis=true 1`] = `
<span
  className="MetroListPlace MetroListPlace_ellipsis"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
  </span>
</span>
`;

exports[`должен отрендерить детей 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
  </span>
  <span
    className="MetroListPlace__content MetroListPlace_space"
  >
    6 минут назад
  </span>
</span>
`;

exports[`должен отрендерить название города 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=false должен отрендерить метро и название города 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroList MetroListPlace__metro MetroListPlace_space"
  >
    <span
      className="MetroList__iconList"
    >
      <span
        className="MetroList__icon"
        style={
          Object {
            "backgroundColor": "#f00",
          }
        }
      />
    </span>
     
    <span
      className="MetroList__station"
    >
      <span
        className="MetroList__stationContent"
      >
        <span
          className="MetroList__stationFirstName"
        >
          Парк 
        </span>
        Культуры
      </span>
    </span>
  </span>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=false должен отрендерить метро, название города и детей 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroList MetroListPlace__metro MetroListPlace_space"
  >
    <span
      className="MetroList__iconList"
    >
      <span
        className="MetroList__icon"
        style={
          Object {
            "backgroundColor": "#f00",
          }
        }
      />
    </span>
     
    <span
      className="MetroList__station"
    >
      <span
        className="MetroList__stationContent"
      >
        <span
          className="MetroList__stationFirstName"
        >
          Парк 
        </span>
        Культуры
      </span>
    </span>
  </span>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
  </span>
  <span
    className="MetroListPlace__content MetroListPlace_space"
  >
    6 минут назад
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=true должен отрендерить метро без города и детей, если оно есть 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroList MetroListPlace__metro MetroListPlace_space"
  >
    <span
      className="MetroList__iconList"
    >
      <span
        className="MetroList__icon"
        style={
          Object {
            "backgroundColor": "#f00",
          }
        }
      />
    </span>
     
    <span
      className="MetroList__station"
    >
      <span
        className="MetroList__stationContent"
      >
        <span
          className="MetroList__stationFirstName"
        >
          Парк 
        </span>
        Культуры
      </span>
    </span>
  </span>
  <span
    className="MetroListPlace__content MetroListPlace_space"
  >
    6 минут назад
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=true должен отрендерить метро без города, если оно есть 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroList MetroListPlace__metro MetroListPlace_space"
  >
    <span
      className="MetroList__iconList"
    >
      <span
        className="MetroList__icon"
        style={
          Object {
            "backgroundColor": "#f00",
          }
        }
      />
    </span>
     
    <span
      className="MetroList__station"
    >
      <span
        className="MetroList__stationContent"
      >
        <span
          className="MetroList__stationFirstName"
        >
          Парк 
        </span>
        Культуры
      </span>
    </span>
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=true должен отрендерить название города и детей, если нет метро 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
  </span>
  <span
    className="MetroListPlace__content MetroListPlace_space"
  >
    6 минут назад
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=true должен отрендерить название города, если нет метро 1`] = `
<span
  className="MetroListPlace"
>
  <span
    className="MetroListPlace__regionName MetroListPlace_space"
  >
    Москва
  </span>
</span>
`;
